--- a/Main/Readme
+++ b/Main/Readme
@@ -1,3 +1,4 @@
+The scripts used to generate the main figures are organized as follows:
 1_scRNA_snRNA - Fig 1-4
 2_Multiomics - Fig5-7
 3_Spatial_GWAS - Fig8
